# clickerGame

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: GameLogic.cpp  GameLogic.h  main.cpp
web/: index.html  main.js  style.css
